# StonkEx

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: dashboard.py  predictor.py
docs/: huggingface.md
scripts/: evaluate.py  prepare_data.py  prepare_universe.py  train.py
stonkex/: __init__.py  config.py
stonkex/data/: __init__.py  datasets.py  preprocessing.py  universe.py
stonkex/inference/: __init__.py  predictor.py
stonkex/models/: __init__.py  transformer.py
stonkex/training/: __init__.py  callbacks.py  trainer.py  utils.py
stonkex/visualization/: __init__.py  chart.py
tests/: test_dataset.py  test_model.py  test_trainer.py
